--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "node": ">=20.16.0"
   },
   "scripts": {
-    "start": "node --watch backend/server.mjs",
-    "dev": "node --watch backend/server.mjs"
+    "dev:backend": "node --watch backend/server.mjs",
+    "dev:frontend": "cd frontend-react && npm run dev",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\""
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.17.6",
@@ -16,5 +17,10 @@
     "express": "^4.18.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16"
   }
 }
