--- a/package.json
+++ b/package.json
@@ -11,16 +11,11 @@
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\""
   },
   "dependencies": {
-    "@excalidraw/excalidraw": "^0.17.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
+    "concurrently": "^8.2.2"
   }
 }
