--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -13,7 +13,9 @@
     "@excalidraw/excalidraw": "^0.17.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
