--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "lucide-react": "^0.468.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
